; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_main.c_quiesce_iq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_main.c_quiesce_iq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.sge_iq = type { i32 }

@IQS_IDLE = common dso_local global i32 0, align 4
@IQS_DISABLED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"iqfree\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*, %struct.sge_iq*)* @quiesce_iq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @quiesce_iq(%struct.adapter* %0, %struct.sge_iq* %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca %struct.sge_iq*, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store %struct.sge_iq* %1, %struct.sge_iq** %4, align 8
  %5 = load %struct.adapter*, %struct.adapter** %3, align 8
  br label %6

6:                                                ; preds = %14, %2
  %7 = load %struct.sge_iq*, %struct.sge_iq** %4, align 8
  %8 = getelementptr inbounds %struct.sge_iq, %struct.sge_iq* %7, i32 0, i32 0
  %9 = load i32, i32* @IQS_IDLE, align 4
  %10 = load i32, i32* @IQS_DISABLED, align 4
  %11 = call i32 @atomic_cmpset_int(i32* %8, i32 %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br i1 %13, label %14, label %16

14:                                               ; preds = %6
  %15 = call i32 @pause(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 1)
  br label %6

16:                                               ; preds = %6
  ret void
}

declare dso_local i32 @atomic_cmpset_int(i32*, i32, i32) #1

declare dso_local i32 @pause(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
